[project]
name = "weather-info-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "pytz>=2022.7.1",
    "rasa<=3.8",
    "requests>=2.32.3",
    "timezonefinder>=6.4.0",
    "typing>=3.10.0.0",
]
